ISIS-2794: fixes object creation callbacks/events not triggered