@@ -19,23 +19,18 @@
 package org.apache.isis.core.metamodel.objectmanager.create;
 
 import java.lang.reflect.Array;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 
-import org.apache.isis.applib.events.lifecycle.AbstractLifecycleEvent;
-import org.apache.isis.applib.services.command.Command;
-import org.apache.isis.applib.services.eventbus.EventBusService;
-import org.apache.isis.commons.internal.base._Casts;
 import org.apache.isis.commons.internal.exceptions._Exceptions;
-import org.apache.isis.commons.internal.factory._InstanceUtil;
 import org.apache.isis.core.metamodel.context.MetaModelContext;
-import org.apache.isis.core.metamodel.facets.object.callbacks.CallbackFacet;
-import org.apache.isis.core.metamodel.facets.object.callbacks.CreatedCallbackFacet;
-import org.apache.isis.core.metamodel.facets.object.callbacks.CreatedLifecycleEventFacet;
-import org.apache.isis.core.metamodel.facets.object.callbacks.LifecycleEventFacet;
+import org.apache.isis.core.metamodel.services.objectlifecycle.ObjectLifecyclePublisher;
 import org.apache.isis.core.metamodel.spec.ManagedObject;
 import org.apache.isis.core.metamodel.spec.ObjectSpecification;
 import org.apache.isis.core.metamodel.spec.feature.MixedIn;
 
+import lombok.AccessLevel;
+import lombok.Getter;
 import lombok.NonNull;
 import lombok.Value;
 import lombok.val;
@@ -49,9 +44,15 @@ import lombok.extern.log4j.Log4j2;
 final class ObjectCreator_builtinHandlers {
 
     @Value @Log4j2
-    public static class LegacyCreationHandler implements ObjectCreator.Handler {
+    public static class DefaultCreationHandler implements ObjectCreator.Handler {
 
+        @Getter
         private final @NonNull MetaModelContext metaModelContext;
+
+        @Getter(lazy = true, value = AccessLevel.PRIVATE)
+        private final ObjectLifecyclePublisher persistenceLifecyclePublisher =
+            getMetaModelContext().getServiceRegistry()
+                    .lookupServiceElseFail(ObjectLifecyclePublisher.class);
 
         @Override
         public boolean isHandling(final ObjectCreator.Request objectCreateRequest) {
@@ -67,14 +68,23 @@ final class ObjectCreator_builtinHandlers {
                 log.debug("creating instance of {}", spec);
             }
 
-            val pojo = instantiateAndInjectServices(spec);
-            val adapter = ManagedObject.of(spec, pojo);
-            return initializePropertiesAndDoCallback(adapter);
+            val pojo = metaModelContext.getServiceInjector()
+                    .injectServicesInto(instantiate(spec));
+            val domainObject = ManagedObject.of(spec, pojo);
+
+            // initialize new object
+            domainObject.getSpecification().streamAssociations(MixedIn.EXCLUDED)
+            .forEach(field->field.toDefault(domainObject));
+
+            getPersistenceLifecyclePublisher().onPostCreate(domainObject);
+
+            return domainObject;
+
         }
 
         //  -- HELPER
 
-        private Object instantiateAndInjectServices(final ObjectSpecification spec) {
+        private Object instantiate(final ObjectSpecification spec) {
 
             val type = spec.getCorrespondingClass();
             if (type.isArray()) {
@@ -87,79 +97,17 @@ final class ObjectCreator_builtinHandlers {
 
             try {
 
-                val newInstance = type.newInstance();
-                metaModelContext.getServiceInjector().injectServicesInto(newInstance);
+                val newInstance = type.getDeclaredConstructor().newInstance();
                 return newInstance;
 
-            } catch (IllegalAccessException | InstantiationException e) {
+            } catch (IllegalAccessException | InstantiationException | IllegalArgumentException
+                    | InvocationTargetException | NoSuchMethodException | SecurityException e) {
                 throw _Exceptions.unrecoverable(
                         "Failed to create instance of type " + spec.getFullIdentifier(), e);
             }
 
         }
 
-        private ManagedObject initializePropertiesAndDoCallback(final ManagedObject adapter) {
-
-            // initialize new object
-            adapter.getSpecification().streamAssociations(MixedIn.EXCLUDED)
-            .forEach(field->field.toDefault(adapter));
-
-             val pojo = adapter.getPojo();
-
-            CallbackFacet.callCallback(adapter, CreatedCallbackFacet.class);
-
-            if (Command.class.isAssignableFrom(pojo.getClass())) {
-
-                // special case... the command object is created while the transaction is being started and before
-                // the event bus service is initialized (nb: we initialize services *within* a transaction).  To resolve
-                // this catch-22 situation, we simply suppress the posting of this event for this domain class.
-
-                // this seems the least unpleasant of the various options available:
-                // * we could have put a check in the EventBusService to ignore the post if not yet initialized;
-                //   however this might hide other genuine errors
-                // * we could have used the thread-local in JdoStateManagerForIsis and the "skip(...)" hook in EventBusServiceJdo
-                //   to have this event be skipped; but that seems like co-opting some other design
-                // * we could have the transaction initialize the EventBusService as a "special case" before creating the Command;
-                //   but then do we worry about it being re-init'd later by the ServicesInitializer?
-
-                // so, doing it this way is this simplest, least obscure.
-
-                if(log.isDebugEnabled()) {
-                    log.debug("Skipping postEvent for creation of Command pojo");
-                }
-
-            } else {
-                postLifecycleEventIfRequired(adapter, CreatedLifecycleEventFacet.class);
-            }
-
-            return adapter;
-        }
-
-        private void postLifecycleEventIfRequired(
-                final ManagedObject adapter,
-                final Class<? extends LifecycleEventFacet> lifecycleEventFacetClass) {
-
-            val lifecycleEventFacet = adapter.getSpecification().getFacet(lifecycleEventFacetClass);
-            if(lifecycleEventFacet == null) {
-                return;
-            }
-
-            val eventType = lifecycleEventFacet.getEventType();
-            val instance = _InstanceUtil.createInstance(eventType);
-            val pojo = adapter.getPojo();
-            postEvent(_Casts.uncheckedCast(instance), pojo);
-
-        }
-
-        private <T> void postEvent(final AbstractLifecycleEvent<T> event, final T pojo) {
-
-            metaModelContext.getServiceRegistry()
-                .lookupService(EventBusService.class)
-                .ifPresent(eventBusService->{
-                    event.initSource(pojo);
-                    eventBusService.post(event);
-                });
-        }
 
 
     }
